--- a/public/register.html
+++ b/public/register.html
@@ -15,8 +15,14 @@
                 <div class="form-row">
                     <div class="input-group half-width">
                         <label for="nome">NOME</label>
-                        <input type="text" id="nome" name="nome" placeholder="Jiara Martins" required>
+                        <input type="text" id="nome" name="nome" placeholder="Jiara" required>
                     </div>
+                    <div class="input-group half-width">
+                        <label for="sobrenome">SOBRENOME</label>
+                        <input type="text" id="sobrenome" name="sobrenome" placeholder="Martins">
+                    </div>
+                </div>
+                <div class="form-row">
                     <div class="input-group half-width">
                         <label for="cargo_fun">VOCÊ É ADMINISTRADOR OU FUNCIONÁRIO?</label>
                         <select id="cargo_fun" name="cargo_fun" required>
@@ -25,28 +31,26 @@
                             <option value="Recepcionista">Funcionário</option>
                         </select>
                     </div>
-                </div>
-                <div class="form-row">
                     <div class="input-group half-width">
                         <label for="cpf">CPF</label>
                         <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" required>
                     </div>
+                </div>
+                <div class="form-row">
                     <div class="input-group half-width">
                         <label for="endereco">ENDEREÇO</label>
                         <input type="text" id="endereco" name="endereco" placeholder="Rua, Bairro, número">
                     </div>
-                </div>
-                <div class="form-row">
                     <div class="input-group half-width">
                         <label for="email">EMAIL</label>
                         <input type="email" id="email" name="email" placeholder="hello@reallygreatsite.com" required>
                     </div>
+                </div>
+                <div class="form-row">
                     <div class="input-group half-width">
                         <label for="telefone">TELEFONE</label>
                         <input type="tel" id="telefone" name="telefone" placeholder="() .....-....">
                     </div>
-                </div>
-                <div class="form-row">
                     <div class="input-group half-width">
                         <label for="password">SENHA</label>
                         <input type="password" id="password" name="password" placeholder="******" required>
