Modificação da Dashboard

--- a/public/html/register-room.html
+++ b/public/html/register-room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Quarto - SISPOU</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -17,20 +17,22 @@
                     <input type="number" id="numero" name="numero" placeholder="Ex: 101" required>
                 </div>
                 <div class="input-group">
-                    <label for="capacidade">CAPACIDADE</label>
-                    <input type="number" id="capacidade" name="capacidade" placeholder="Ex: 2" required>
+                    <label for="capacidade">CAPACIDADE (máximo 4 pessoas)</label>
+                    <input type="number" id="capacidade" name="capacidade" placeholder="Ex: 2" min="1" max="4" required>
                 </div>
-                <div class="input-group">
-                    <label for="preco">PREÇO DA DIÁRIA</label>
-                    <input type="text" id="preco" name="preco" placeholder="Ex: 250.50" required>
-                </div>
-
                 <div class="input-group">
                     <label for="status">STATUS DO QUARTO</label>
                     <select id="status" name="status" required>
                         <option value="Disponível" selected>Disponível</option>
                         <option value="Ocupado">Ocupado</option>
                         <option value="Em manutenção">Em manutenção</option>
+                    </select>
+                </div>
+                <div class= "input-group">
+                    <label for="tipo">TIPO</label>
+                    <select id="tipo" name="tipo" required>
+                        <option value = "arcondicionado">Ar-Condicionado</option>
+                        <option value="ventilador">Ventilador</option>
                     </select>
                 </div>
 
@@ -42,6 +44,6 @@
             <div id="message" class="message"></div>
         </div>
     </div>
-    <script src="js/room.js"></script>
+    <script src="/js/room.js"></script>
 </body>
 </html>
