--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - SISPOU</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="dashboard-body">
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script src="js/dashboard.js"></script>
+    <script src="/js/dashboard.js"></script>
 </body>
 
 </html>
