--- a/public/html/register.html
+++ b/public/html/register.html
@@ -56,7 +56,7 @@
                         <input type="password" id="password" name="password" placeholder="******" required>
                     </div>
                 </div>
-                <button type="submit" class="btn">sign up</button>
+                <button type="submit" class="btn">CADASTRE-SE</button>
                 <div class="footer-link">
                     <span>JÁ TEM CADASTRO? <a href="/">LOGIN</a></span>
                 </div>
