--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -14,6 +14,15 @@
     </header>
 
     <div class="room-list-container">
+        <div>
+            <label for="filtro">Filtrar quarto por status</label>
+            <select id="filtroStatus">
+                <option value="">Todos</option>
+                <option value="Disponível">Disponível</option>
+                <option value="Ocupado">Ocupado</option>
+                <option value="Em manutenção">Em Manutenção</option>
+            </select>    
+        </div>
         <h3>Quartos Cadastrados</h3>
         <div id="roomList" class="room-grid">
         </div>
