--- a/public/html/register.html
+++ b/public/html/register.html
@@ -64,6 +64,7 @@
             <div id="message" class="message"></div>
         </div>
     </div>
+    <script src="/js/validator.js"></script>
     <script src="/js/auth.js"></script>
 </body>
 </html>
