--- a/front/public/html/register-client.html
+++ b/front/public/html/register-client.html
@@ -40,7 +40,7 @@
             </form>
         </div>
     </div>
-    <script src="/js/api.js"></script>
+    <script src="/api/api.js"></script>
     <script src="/js/validator.js"></script>
     <script src="/js/register-client.js"></script>
 </body>
