--- a/front/public/html/login.html
+++ b/front/public/html/login.html
@@ -28,7 +28,8 @@
             <div id="message" class="message"></div>
         </div>
     </div>
-    <script src="/js/api.js"></script>
+    <script src="/api/api.js"></script>
+    <script src="/js/validator.js"></script>
     <script src="/js/auth.js"></script>
 </body>
 </html>
