--- a/front/public/html/register.html
+++ b/front/public/html/register.html
@@ -64,7 +64,7 @@
             <div id="message" class="message"></div>
         </div>
     </div>
-    <script src="/js/api.js"></script>
+    <script src="/api/api.js"></script>
     <script src="/js/validator.js"></script>
     <script src="/js/auth.js"></script>
 </body>
