Ajeitando Correções e Limpando o Codigo

--- a/front/public/html/register-reservation.html
+++ b/front/public/html/register-reservation.html
@@ -54,7 +54,7 @@
                     <a href="/dashboard" class="btn btn-secondary">Voltar</a>
                 </div>
             </form>
-            <div id="message" class="message"></div>
+            <div id="message" class="message" style="white-space: pre-line; font-size: 14px; line-height: 1.6;"></div>
         </div>
     </div>
 
